fix joi schemas
